remove max mem, switch to zgc